# Ads-Manager

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py  sync_database.py
.github/workflows/: ci.yml
ads_manager/: hooks.py  install.py
ads_manager/ads_manager/: __init__.py  config.py  task.py
ads_manager/ads_manager/api/: oauth.py
ads_manager/ads_manager/custom/: custom_fields.py
ads_manager/ads_manager/doctype/ad_campaign/: ad_campaign.js  ad_campaign.json  ad_campaign.py  ad_campaign_list.js  test_ad_campaign.py
ads_manager/ads_manager/doctype/ad_creative/: ad_creative.js  ad_creative.json  ad_creative.py  test_ad_creative.py
ads_manager/ads_manager/doctype/ad_media/: ad_media.json  ad_media.py
ads_manager/ads_manager/doctype/ad_post/: ad_post.js  ad_post.json  ad_post.py  ad_post_list.js  test_ad_post.py
ads_manager/ads_manager/doctype/ad_set/: ad_set.js  ad_set.json  ad_set.py  test_ad_set.py
ads_manager/ads_manager/doctype/ads_account_integration/: ads_account_integration.js  ads_account_integration.json  ads_account_integration.py  ads_account_integration_list.js  test_ads_account_integration.py
ads_manager/ads_manager/doctype/ads_campaign/: ads_campaign.js  ads_campaign.json  ads_campaign.py  test_ads_campaign.py
ads_manager/ads_manager/doctype/ads_setting/: ads_setting.js  ads_setting.json  ads_setting.py  test_ads_setting.py
ads_manager/ads_manager/doctype/facebook_pages/: facebook_pages.js  facebook_pages.json  facebook_pages.py  test_facebook_pages.py
ads_manager/ads_manager/doctype/schedule_execution_log/: schedule_execution_log.json  schedule_execution_log.py
ads_manager/ads_manager/doctype/time_period_for_budget/: time_period_for_budget.json  time_period_for_budget.py
ads_manager/ads_manager/providers/: __init__.py  base.py  meta_ads.py
ads_manager/ads_manager/services/: ad_analytics_service.py  ad_post_service.py  ad_token_service.py  campaign_service.py  scheduler.py  token_service.py
ads_manager/ads_manager/setup/: server_scripts.py
ads_manager/ads_manager/tests/: test_oauth.py
ads_manager/ads_manager/utils/: __init__.py  media.py
ads_manager/ads_manager/workspace/ads_scheduler/: ads_scheduler.json
ads_manager/www/: select-ads-account.html  select-ads-account.py
