[project]
name = "ads_manager"
version = "1.0.0"
description = "Social Media Ads Scheduler and management"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Abhishek", email = "abhishekhiremath4949@gmail.com"}
]
keywords = ["frappe", "ads", "social media", "scheduler", "management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Frappe",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10"

dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "tweepy>=4.14.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "requests>=2.31.0",
    "requests-oauthlib>=1.3.1",
    "Pillow>=10.0.0",
    "python-magic>=0.4.27",
]
[project.urls]
"Homepage" = "https://github.com/Abhishek-Hiremath49/Ads-Manager"
"Repository" = "https://github.com/Abhishek-Hiremath49/Ads-Manager.git"
"Documetation" = "https://github.com/Abhishek-Hiremath49/Ads-Manager#readme"
"Issues" = "https://github.com/Abhishek-Hiremath49/Ads-Manager/issues"

[build-system]
requires = ["flit_core >=3.4,<4", "setuptools>=61.0", "wheel"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.setuptools.packages.find]
where = ["."]
include = ["frappe_social*"]

[tool.black]
line-length = 110
target-version = ["py310"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
